// Example of protobuf definition for parser tests

syntax = "proto3";

package vapi_tests.parser_proto_example;

import "google/protobuf/timestamp.proto";

// option example
option java_multiple_files = true;

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  google.protobuf.Timestamp last_updated = 5;
}

message AddressBook {
  uint32 id = 1;
  repeated Person people = 2;
}

message GetPersonListResponse {
  repeated Person items = 1;
}

message GetAddressBookRequest {
  uint32 id = 1;
}

message GetAddressBookListResponse {
  repeated AddressBook items = 1;
}

message GetPersonRequest {
  int32 id = 1;
}

service AddressBookService {
  // unary-unary
  rpc GetPersonList(Person) returns (GetPersonListResponse);
  // unary-stream
  rpc GetAddressBookList(AddressBook) returns (stream GetAddressBookListResponse);
  // stream-unary
  rpc GetPerson(stream GetPersonRequest) returns (Person);
  // stream-stream
  rpc GetAddressBook(stream GetAddressBookRequest) returns (stream AddressBook);
}
